---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var b : boolean\n\nvar _e00 : real := b\n"
---
"b"@(FileId(1), 4..5) [ConstVar(Var, No)]: boolean
"_e00"@(FileId(1), 21..25) [ConstVar(Var, No)]: real
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 36..37: mismatched types
| note in file FileId(1) for 36..37: this is of type `boolean`
| note in file FileId(1) for 28..32: this is of type `real`
| info: `boolean` is not assignable into `real`
